[project]
name = "arxiv-public-data"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Danielle Rothermel", email = "danielle.rothermel@gmail.com" }
]
dependencies = [
    "poppler-utils>=0.1.0",
    "boto3>=1.35.40",
    "requests>=2.32.3",
    "unicodedata2>=15.1.0",
    "pdfminer3k @ https://github.com/jaepil/pdfminer3k/archive/1.0.4.zip",
    "pdfminer-six>=20240706",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
get_metadata = "arxiv_public_data:all_of_arxiv"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["arxiv_public_data"]
